--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     //OkHttp
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
 
+    //Referesh
+    implementation 'com.google.android.material:material:1.0.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
